# crypto-tracker

./: .gitignore  README.md  data  pyproject.toml
crypto_tracker/: app.py  data_utils.py
crypto_tracker/routes/: api.py  pages.py
crypto_tracker/static/css/: style.css
crypto_tracker/static/js/: add_crypto.js  clock.js  fetch_cryptos.js  script.js
crypto_tracker/static/js/deposit/: summary.js
crypto_tracker/static/js/wallet/: balance.js  history-pagination.js  history.js  sold.js
crypto_tracker/templates/: add_crypto.html  base.html  index.html  nav.html  purchased_cryptos_list.html
crypto_tracker/templates/deposit/: add.html  broker.html  edit.html  get.html  summary.html
crypto_tracker/templates/wallet/: add.html  balance.html  edit.html  get.html  history.html  sold.html  update.html
crypto_tracker/utility/: crypto_csv_data_utils.py  deposit_data_utils.py
data/: deposit.csv  purchased_cryptos.csv  purchased_cryptos.json  sold_cryptos.csv  wallet_balance.csv
scripts/: create_feature_branch.sh
systemd_services/: cryptoapp.service
