[tool.poetry]
name = "crypto_tracker"
version = "0.1.0"
description = "A lightweight, local web tool for managing and viewing your personal cryptocurrency purchases."
authors = ["kranjuli <timit06@google.com>"]
readme = "README.md"

packages = [
    { include = "crypto_tracker" }
]

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.1.1"
gunicorn = "^23.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
